# climbingrobot_description

./: CMakeLists.txt  package.xml
config/: climbingrobot2.world
launch/: rviz_paper_landing_no_wheels.launch  upload.launch
meshes/: runtime_mesh.mtl
msg/: PropellerCommand.msg  RopeCommand.msg  RopeTelemetry.msg
rviz/: conf.rviz  conf_paper_landing_no_wheels.rviz
srv/: RopeControlMode.srv
urdf/: climbingrobot2.xacro  climbingrobot2landingnowheels_paper.xacro  propellers_couple.urdf.xacro
